--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         .social-icons {
             position: absolute;
             bottom: 40px;
-            width: 170px;
+            width: 150px;
             display: flex;
             justify-content: space-between;
         }
@@ -854,9 +854,8 @@
         
         <div class="social-icons">
             <a href="https://www.instagram.com/_thepixelpoet/"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="https://vimeo.com/showcase/11688733"><i class="fab fa-vimeo"></i></a>
             <a href="https://www.linkedin.com/in/devanshu-kumar-014525275"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
         </div>
     </section>
     
@@ -997,9 +996,9 @@
 
             <div class="footer-social">
                 <a href="https://www.instagram.com/_thepixelpoet/"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://vimeo.com/showcase/11688733"><i class="fab fa-vimeo"></i></a>
+
                 <a href="https://www.linkedin.com/in/devanshu-kumar-014525275"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-behance"></i></a>
             </div>
         </div>
    
