--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,14 @@
         </div>
     </footer>
     
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EVS3D2X2C7"></script>
     <script>
+        window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EVS3D2X2C7');
         // Preloader
         window.addEventListener('load', function() {
             const preloader = document.querySelector('.preloader');
